k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: liveworld
  labels:
    app.kubernetes.io/name: liveworld
